# omnibinary-runtime

./: BUILD_STATUS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FINAL_READINESS_VERDICT.md  LICENSE  Makefile  PRODUCT_STATUS.json  README.md  RELEASE_MANIFEST.json  SECURITY.md  obi.example.toml
crates/obi-cache/: Cargo.toml
crates/obi-cli/: Cargo.toml
crates/obi-cli/src/: main.rs
docs/: acceptance-criteria.md  architecture.md  benchmarking.md  block-cache-contract.md  cache-format.md  cache-hygiene.md  cache-validation.md  ci-matrix.md  cli.md  compatibility-matrix.md  completion-map.md  configuration.md  decode-and-dispatch.md  decoder-contract.md  decoder-state-machine.md  evidence-pack.md  execution-backlog.md  execution-core-gap-ledger.md  execution-slice-plan.md  execution-slices.md  first-real-execution-milestone.md  fixture-policy.md  go-live-plan.md  implementation-backlog.md  ir-and-dbt.md  jit-and-artifacts.md  lane-matrix.md  local-validation-runbook.md  lowering-contract.md  machine-validation-evidence.md  machine-validation-plan.md  packaging-boundary.md  personality-contract.md  preflight-flow.md  product-positioning.md  production-gap-narrowing.md  production-gaps.md  production-readiness-checklist.md  readiness-model.md  real-execution-workpacks.md  (+17 more)
examples/: README.md  obi.minimal.toml
scripts/: cache-validate.sh  completion-map.sh  core-acceptance.sh  dev-loop.sh  evidence-pack.sh  final-verdict.sh  fixture-audit.sh  impl-backlog.sh  lane-matrix.sh  machine-evidence-plan.sh  next-core-milestone.sh  package.sh  preflight.sh  readiness-report.sh  release-blockers.sh  release-checklist.sh  repo-audit.sh  report-pack.sh  runtime-core-score.sh  slice-report.sh  smoke.sh  truth-ledger.sh  verify-repo.sh
tests/: README.md  decode-preview.md  lowering-preview.md  operations.md  smoke.md
(+34 files in other folders)
