[workspace]
members = [
  "crates/obi-cli",
  "crates/obi-core",
  "crates/obi-intake",
  "crates/obi-loader",
  "crates/obi-policy",
  "crates/obi-receipts",
  "crates/obi-ir",
  "crates/obi-lane-native",
  "crates/obi-lane-dbt",
  "crates/obi-cache",
  "crates/obi-config",
  "crates/obi-jit-cranelift",
  "crates/obi-jit-llvm",
  "crates/obi-lane-managed",
  "crates/obi-personality-linux",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.8.0"
authors = ["OpenAI"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
goblin = "0.8"
object = "0.36"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
